--- a/camel-core/src/main/java/org/apache/camel/language/property/package.html
+++ b/camel-core/src/main/java/org/apache/camel/language/property/package.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-Camel <a href="http://camel.apache.org/header.html">Property</a> language.
+Camel <a href="http://camel.apache.org/property.html">Exchange Property</a> language.
 
 </body>
 </html>
