--- a/tooling/archetypes/camel-archetype-web/src/main/resources/archetype-resources/src/main/webapp/index.html
+++ b/tooling/archetypes/camel-archetype-web/src/main/resources/archetype-resources/src/main/webapp/index.html
@@ -1,12 +1,27 @@
 <html>
 
 <body>
-<h2>Camel Archetype Web</h2>
+<h2>Camel Servlet example</h2>
 
-  This is a simple example that was created with camel-archetype-web.
-  <p/>
-  A Camel route is deployed that logs to system.out every 10 seconds.
+This example shows how to route messages from HTTP using servlets with Apache Camel.
+<br/>
+<br/>
+To get started click <a href="camel/hello">this link</a>.
+<br/>
+<br/>
+This example is documented at
+<a href="http://camel.apache.org/servlet-tomcat-example.html">servlet tomcat example</a>
 
+<br/>
+If you hit any problems please let us know on the
+<a href="http://camel.apache.org/discussion-forums.html">Camel Forums</a>
+<br/>
+<br/>
+Please help us make Apache Camel better - we appreciate any feedback you may
+have. Enjoy!
+<br/>
+<br/>
+The Camel riders!
 </body>
 
 </html>
